tester/src/test/aya/failure/syntax/issue166.aya.txt
In file $FILE:1:0 ->

  1 | \fuck
      ^^
  
Error: Parser error: token recognition error at: '\f'
Parsing interrupted due to errors.
What are you doing?
